--- a/css/style.css
+++ b/css/style.css
@@ -857,14 +857,6 @@ select.form-select:focus {
   border-color: #ace;
 }
 
-html.js input.form-autocomplete {
-  background-position: 100% 4px;
-}
-
-html.js input.throbbing {
-  background-position: 100% -16px;
-}
-
 ul.action-links {
   margin: 1em 0;
   padding: 0 20px 0 20px;
