--- a/scss/shiny.scss
+++ b/scss/shiny.scss
@@ -666,11 +666,7 @@ fieldset.collapsed {
   padding-left: 0; /* LTR */
 }
 html.js input.form-autocomplete {
-  background-position: 100% 7px;
   padding: 3px 5px;
-}
-html.js input.throbbing {
-  background-position: 100% -14px;
 }
 /**
 * admin/modules
